# avro-generator

./: Cargo.toml  LICENSE  README.md
src/: errors.rs  generator.rs  ir.rs  main.rs  parser.rs
src/snapshots/: avro_generator__generator__tests__generate_fixed.snap  avro_generator__generator__tests__generate_union_enum.snap  avro_generator__generator__tests__generator_on_all_schemas@01_simple_record.avsc.snap  avro_generator__generator__tests__generator_on_all_schemas@03_complex_types.avsc.snap  avro_generator__generator__tests__generator_on_all_schemas@04_nested_records.avsc.snap  avro_generator__generator__tests__generator_on_all_schemas@05_recursive_record.avsc.snap  avro_generator__generator__tests__generator_on_all_schemas@06_namespaced_records.avsc.snap  avro_generator__ir__parser_on_all_schemas@01_simple_record.avsc.snap  avro_generator__ir__parser_on_all_schemas@02_logical_types.avsc.snap  avro_generator__ir__parser_on_all_schemas@03_complex_types.avsc.snap  avro_generator__ir__parser_on_all_schemas@04_nested_records.avsc.snap  avro_generator__ir__parser_on_all_schemas@05_recursive_record.avsc.snap  avro_generator__ir__parser_on_all_schemas@06_namespaced_records.avsc.snap  avro_generator__ir__recursive_record_schema.snap  avro_generator__parser__parser_on_all_schemas@03_complex_types.avsc.snap  avro_generator__parser__parser_on_all_schemas@04_nested_records.avsc.snap  avro_rust_codegen__generator__tests__generate_enum.snap  avro_rust_codegen__generator__tests__generate_enum.snap.new  avro_rust_codegen__generator__tests__generate_fixed.snap.new  (+35 more)
(+12 files in other folders)
