[package]
name = "avro-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
apache-avro = "0.19.0"
chrono = "0.4.41"
insta = { version = "1.43.1", features = ["glob"] }
num-bigint = "0.4.6"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = "2.0.104"

[dev-dependencies]
prettyplease = "0.2.0"
