[package]
name = "avro-rust-codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
apache-avro = "0.19.0"
bigdecimal = "0.4.8"
chrono = "0.4.41"
insta = { version = "1.43.1", features = ["glob"] }
num-bigint = "0.4.6"
proc-macro2 = "1.0.95"
quote = "1.0.40"
rust_decimal = "1.37.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = "2.0.104"
thiserror = "2.0.12"
uuid = "1.17.0"
clap = { version = "4.0", features = ["derive"] }
prettyplease = "0.2.0"

[lints.clippy]
too_many_lines = "allow"
unused-self = "allow"
pedantic = { level = "warn", priority = -1 }
